# testagent

./: .gitignore  Dockerfile  README.md  agent.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
testagent/: __init__.py  agent-card.json  agent.py  mcp_tools.py
