[project]
name = "testagent"
version = "0.1"
description = "testagent agent"
readme = "README.md"
dependencies = [
  "fastapi>=0.135.3",
  "mcp-proxy-for-aws>=1.3.0",
  "pydantic>=2.13.0",
  "strands-agents>=1.35.0",
  "uvicorn[standard]>=0.44.0",
]
requires-python = ">=3.13"

[project.scripts]
testagent = "testagent.agent:main"
